--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,8 @@
 
           <nav>
             <a href="{{ site.baseurl }}/../">Thoughts</a>
-            <a href="{{ site.baseurl }}/">Minutes</a>
+            <a href="{{ site.baseurl}}/../minutes">Minutes</a>
+	    <a href="{{ site.baseurl }}/">Addons</a>
             <a href="{{ site.baseurl }}/../about">About</a>
           </nav>
         </header>
