--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,9 +27,9 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/../">Thoughts</a>
-            <a href="{{ site.baseurl}}/../minuteskeeper">Minutes</a>
-	    <a href="{{ site.baseurl }}/">Addons</a>
+            <a href="{{ site.baseurl }}/../">Thinking</a>
+            <a href="{{ site.baseurl}}/../minuteskeeper">Doing</a>
+	    <a href="{{ site.baseurl }}/">Coding</a>
             <a href="{{ site.baseurl }}/../about">About</a>
           </nav>
         </header>
