--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,10 +27,8 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/../">Read</a>
-            <a href="{{ site.baseurl}}/../do">Do</a>
-	    <a href="{{ site.baseurl }}/">Code</a>
-            <a href="{{ site.baseurl }}/../about">About</a>
+	    <a href="{{ site.baseurl }}/">Read</a>
+	    <a href="{{ site.baseurl}}/../write">Write</a>
           </nav>
         </header>
       </div>
