--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
 
           <nav>
 	    <a href="{{ site.baseurl }}/">Read</a>
-	    <a href="{{ site.baseurl}}/../write">Write</a>
+	    <a href="{{ site.baseurl}}/../skriv">Write</a>
           </nav>
         </header>
       </div>
